# PyMCTranslate

./: .gitattributes  .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  fix_case.py  minify_json.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-build.yml  python-stylecheck.yml  python-unittests.yml
PyMCTranslate/: README.md  __init__.py  _version.py  data_version_handler.py
PyMCTranslate/__pyinstaller/: hook-PyMCTranslate.code_functions.py  hook-PyMCTranslate.py
PyMCTranslate/code_functions/: banner_pattern_2u.py  banner_pattern_fu.py  bedrock_chest_connection_other_left.py  bedrock_chest_connection_other_left_120.py  bedrock_chest_connection_other_right.py  bedrock_chest_connection_other_right_120.py  bedrock_chest_connection_self.py  bedrock_chest_connection_self_120.py  bedrock_chest_fu.py  bedrock_cmd_custom_name_2u.py  bedrock_cmd_custom_name_fu.py  bedrock_moving_block_pos_2u.py  bedrock_moving_block_pos_fu.py  bedrock_sign_2u.py  bedrock_sign_2u_120.py  bedrock_sign_fu.py  bedrock_sign_fu_120.py  bedrock_skull_rotation_2u.py
PyMCTranslate/helpers/: nbt.py  objects.py  version_code.py
PyMCTranslate/mappings/bedrock_1_11_4/: __init__.json
PyMCTranslate/mappings/bedrock_1_13_0/: __init__.json
PyMCTranslate/mappings/bedrock_1_7_0/: __init__.json
PyMCTranslate/mappings/java_1_12_2/: __numerical_block_map__.json
PyMCTranslate/mappings/java_1_13_2/: __init__.json  __waterlogable__.json
PyMCTranslate/py2/: read_27.py
PyMCTranslate/py3/: __init__.py  _log.py  _translate.py  biomes.py  code_functions.py  convert.py  log.py  lua.py  meta.py  registry.py  translation_handler.py  translation_manager.py  util.py  versions.py
PyMCTranslate/py3/amulet_objects/: block.py
PyMCTranslate/py3/api/: __init__.py  block.py  errors.py
PyMCTranslate/py3/helpers/: nbt.py  objects.py  version_code.py
PyMCTranslate/py3/translation_manager/: __init__.py
PyMCTranslate/py3/util/: json_gz.py  raw_text.py
PyMCTranslate/py3/versions/: __init__.py  biomes.py  code_functions.py  translate.py  translation_database.py
build_tools/: minify.py  minify_json.py
docs/: conf.py  index.rst  mappings_documentation.md  specification_documentation.md
docs_src/: conf.py  index.rst  requirements.txt
docs_src/py3/: index.rst
tests/: basic_test.py  convert_cli.py  convert_ui.py  get_versions.py  in_and_out_test.py  is_invalid_state.py  subset_test.py  test_biomes.py  test_in_and_out.py  to_universal_bedrock_debug.py  to_universal_debug.py
tests/_old/: convert_ui.py
tests/in_out_test/: bedrock_(1, 13, 0).txt  bedrock_(1, 14, 0).txt  bedrock_(1, 16, 0).txt  bedrock_(1, 16, 20).txt  bedrock_(1, 16, 220).txt  bedrock_(1, 17, 0).txt  bedrock_(1, 17, 10).txt  bedrock_(1, 17, 30).txt  bedrock_(1, 17, 40).txt  bedrock_(1, 18, 0).txt  bedrock_(1, 18, 30).txt  bedrock_(1, 19, 0).txt  java_(1, 12, 2).txt
tools/: blockstates.txt  gen_rotation.py
(+10671 files in other folders)
