
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = PyMCTranslate/_version.py
versionfile_build = PyMCTranslate/_version.py
tag_prefix =
parentdir_prefix = PyMCTranslate-

[options.entry_points]
pyinstaller40 = 
    hook-dirs = PyMCTranslate.__pyinstaller:get_hook_dirs
