[metadata]
name = PyMCTranslate
url = https://www.amuletmc.com
author = James Clare
author_email = amuleteditor@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = A Minecraft data translation system.
long_description = file: README.md
platforms = any


[options]
packages = PyMCTranslate
zip_safe = False
include_package_data = True
python_requires = ~=3.6
install_requires =
    numpy~=1.17
    amulet-nbt~=2.0a0


[options.extras_require]
docs =
    Sphinx>=1.7.4
    sphinx-autodoc-typehints>=1.3.0
    sphinx_rtd_theme>=0.3.1
dev =
    black>=22.3
    pre_commit>=1.11.1


[options.entry_points]
pyinstaller40 =
    hook-dirs = PyMCTranslate.__pyinstaller:get_hook_dirs
setuptools.finalize_distribution_options =
    compile = build_tools.minify:install



# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = PyMCTranslate/_version.py
versionfile_build = PyMCTranslate/_version.py
tag_prefix =
parentdir_prefix = PyMCTranslate-
